tests/testcrate/tests/ui/macro.stderr
error: this macro takes 1 parameter but 0 parameters were supplied
  --> $DIR/macro.rs:56:5
   |
56 |     to_sql!();
   |     ^^^^^^^^^^

error: this macro takes 1 parameter but 0 parameters were supplied
  --> $DIR/macro.rs:61:5
   |
61 |     sql!();
   |     ^^^^^^^

error: `Table` is the name of a struct, but this expression uses it like a method name
  --> $DIR/macro.rs:66:10
   |
66 |     sql!(Table);
   |          ^^^^^
   |
   = help: did you mean to write `Table.method()`?

error: Expected method call
  --> $DIR/macro.rs:70:10
   |
70 |     sql!(Table());
   |          ^^^^^^^

error: cannot call the filter() method with the insert() method
  --> $DIR/macro.rs:73:25
   |
73 |     sql!(Table.insert().filter(i32_field == 10).delete());
   |                         ^^^^^^

error: cannot call the delete() method with the insert() method
  --> $DIR/macro.rs:73:49
   |
73 |     sql!(Table.insert().filter(i32_field == 10).delete());
   |                                                 ^^^^^^

error: cannot call the delete() method with the update() method
  --> $DIR/macro.rs:77:63
   |
77 |     sql!(Table.update(i32_field = 10).filter(i32_field == 10).delete());
   |                                                               ^^^^^^

error: cannot call the join() method with the delete() method
  --> $DIR/macro.rs:80:16
   |
80 |     sql!(Table.join(field2).filter(i32_field == 10).delete());
   |                ^^^^

error: cannot call the insert() method with the create() method
  --> $DIR/macro.rs:83:25
   |
83 |     sql!(Table.create().insert().filter(i32_field == 10).delete());
   |                         ^^^^^^

error: cannot call the filter() method with the create() method
  --> $DIR/macro.rs:83:34
   |
83 |     sql!(Table.create().insert().filter(i32_field == 10).delete());
   |                                  ^^^^^^

error: cannot call the delete() method with the create() method
  --> $DIR/macro.rs:83:58
   |
83 |     sql!(Table.create().insert().filter(i32_field == 10).delete());
   |                                                          ^^^^^^

error: cannot call the insert() method with the drop() method
  --> $DIR/macro.rs:88:23
   |
88 |     sql!(Table.drop().insert().filter(i32_field == 10).delete());
   |                       ^^^^^^

error: cannot call the filter() method with the drop() method
  --> $DIR/macro.rs:88:32
   |
88 |     sql!(Table.drop().insert().filter(i32_field == 10).delete());
   |                                ^^^^^^

error: cannot call the delete() method with the drop() method
  --> $DIR/macro.rs:88:56
   |
88 |     sql!(Table.drop().insert().filter(i32_field == 10).delete());
   |                                                        ^^^^^^

error: cannot call the drop() method with the aggregate() method
  --> $DIR/macro.rs:93:66
   |
93 |     sql!(Table.filter(i32_field == 10).aggregate(avg(i32_field)).drop().insert().filter(i32_field_avg == 10).delete());
   |                                                                  ^^^^

error: cannot call the insert() method with the aggregate() method
  --> $DIR/macro.rs:93:73
   |
93 |     sql!(Table.filter(i32_field == 10).aggregate(avg(i32_field)).drop().insert().filter(i32_field_avg == 10).delete());
   |                                                                         ^^^^^^

error: cannot call the delete() method with the aggregate() method
  --> $DIR/macro.rs:93:110
   |
93 |     sql!(Table.filter(i32_field == 10).aggregate(avg(i32_field)).drop().insert().filter(i32_field_avg == 10).delete());
   |                                                                                                              ^^^^^^

error: aborting due to 17 previous errors

